Removed unnecessary dependency

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "holmes",
+  "name": "poems",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,6 +10,5 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "lodash": "^4.17.4"
   }
 }
